--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "url": "git+https://github.com/jsx-plus/swc-plugin-transform-jsx-list.git"
   },
   "devDependencies": {
-    "@swc/core": "^1.2.203",
     "jest": "^24.9.0",
     "typescript": "^4.7.3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@swc/core": "^1.2.203"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jsx-plus/swc-plugin-transform-jsx-list/issues"
